[project]
name = "sparkchoice"
version = "0.2.0"
description = "The smallest system that chooses the best next use of AI and expresses it as a concrete, artifact-producing action."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "David Liedle", email = "david.liedle@protonmail.com"},
]
keywords = ["ai", "planning", "decision", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
sparkchoice = "sparkchoice:main"

[project.urls]
Homepage = "https://github.com/DavidCanHelp/SparkChoice"
Source = "https://github.com/DavidCanHelp/SparkChoice"
